--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,11 @@
     --primary-dark: #1c2135;
     --secondary-dark: #1d2236;
     --tertiary-dark: #f5f7fa;
-    --background-dark: #F2EAD3;
+    --background-dark: #ffffff;
     --accent-dark: #ffffff;
     --hover-dark: #1f2438;
     --active-dark: #1b2034;
-    --card-bg-color: rgba(44, 44, 44, 0.8);
+    --card-bg-color: #1c2135;
     --card-bg-color-reviews: #2c2c2c;
     --white: #ffffff;
     --gold: #d4af37;
